fixed linux build breaks

--- a/dev/test/CMakeLists.txt
+++ b/dev/test/CMakeLists.txt
@@ -4,4 +4,7 @@ find_package(Vulkan)
 if (Vulkan_FOUND)
     add_executable(hello-world-vulkan hello-world-vulkan.cpp)
     target_include_directories(hello-world-vulkan PUBLIC ../../inc ../3rd-party/rapid-vulkan/inc ${Vulkan_INCLUDE_DIRS})
+    if (UNIX)
+        target_link_libraries(hello-world-vulkan PUBLIC dl)
+    endif()
 endif()
