updated to the lastest rapid-vulkan header

--- a/dev/env/env.rc
+++ b/dev/env/env.rc
@@ -42,7 +42,7 @@ __check_package git-lfs
 __check_package vulkan-sdk
 
 # update PATH
-export PATH=${PATH}:${DETECTIVE_CONAN_ROOT}/dev/bin
+export PATH=${DETECTIVE_CONAN_ROOT}/dev/bin:${PATH}
 if [[ ! -z ${ANDROID_SDK_ROOT} ]]; then
     export PATH=${PATH}:${ANDROID_SDK_ROOT}/platform-tools
 fi
@@ -79,7 +79,7 @@ get-git-branch() {
 }
 
 # setup command line prompt
-PS1="\n\e[00;92m==== [rapid-vulkan] - \e[01;96m${DETECTIVE_CONAN_ROOT}\e[00;92m - \e[01;93m\$(get-git-branch)\e[00;92m ====\e[m\n$PS1"
+PS1="\n\e[00;92m==== [detective-conan] - \e[01;96m${DETECTIVE_CONAN_ROOT}\e[00;92m - \e[01;93m\$(get-git-branch)\e[00;92m ====\e[m\n$PS1"
 
 # done
 echo
